Updated by task 'AutomatedMDTask_1646331728783_TM-MT_1646331758502'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/32d50acdb01a78763b81d9cdc871abd7eebc3a3a

--- a/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
@@ -4,9 +4,9 @@ description: Versionsinformation för visningsprogram för Adobe Dynamic Media.
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
-source-git-commit: 1206692a788d3e675b1f7f83a7835037905e0bba
+source-git-commit: 364583e4eb648e8e68736bfb24fa4f7d635e1291
 workflow-type: tm+mt
-source-wordcount: '0'
+source-wordcount: '653'
 ht-degree: 0%
 
 ---
@@ -66,8 +66,8 @@ Paketet innehåller följande:
 
 ## Dynamic Media Viewer 5.16.3 {#new-features-and-enhancements-5-16-3}
 
-* Fällning av NVDA-fokus i den zoombara vyn när du använder navigeringsknapparna +, - och Esc har korrigerats. (CQ-4290719)
-* Stöd för ARIA har lagts till i volymreglaget. (CQ-4324080)
+* Fällning av NVDA-fokus i den zoombara vyn när du använder navigeringsknapparna +, - och Esc har korrigerats. <!-- (CQ-4290719) -->
+* Stöd för ARIA har lagts till i volymreglaget. <!--  (CQ-4324080) -->
 * En visuell asterisk (*) har lagts till för `To` och `From` obligatoriska redigeringsfält för e-post i dialogrutan E-post. <!-- (CQ-4290935) -->
 * Information om berättarröstsetikett har korrigerats i e-postdialogrutan med hjälp av nedpilen och kortkommandotangenten i formulärläge `F`. <!-- (CQ-4290934) -->
 * Åtgärdade felförslag för `To` och `From` i e-postdialogrutan om att använda tangentbordsfliken. <!-- (CQ-4290930) -->
