Updated by task 'AutomatedMDTask_1646433632743_TM-MT_1646433646255'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/97a7f634313a23d9baa620e9e19ab50bea96ce15

--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 50dddf148345d2ca5243d5d7108fefa56d23dad6
+source-git-commit: 790ce3aa4e9aadc019d17e663fc93d7c69772b23
 workflow-type: tm+mt
-source-wordcount: '1076'
+source-wordcount: '1075'
 ht-degree: 0%
 
 ---
@@ -130,9 +130,9 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 
    >[!NOTE]
    >
-   >Metadataservern blir tillgänglig från och med maj. Den måste aktiveras av supporten. Metadataservern är för närvarande endast tillgänglig i Nordamerika och Europa.
+   >Metadataservern är tillgänglig från och med maj. Den måste aktiveras av supporten. Metadataservern är för närvarande endast tillgänglig i Nordamerika och Europa.
 
-* Metadataservern visar en delmängd av alla metadatafält i en resurs för en offentlig server och kan begäras här av eCom-sidor eller servrar. Dessa exponerade metadata kan vara en blandad uppsättning med egenskaper för tillgångsegenskaper, användardefinierat fält, XMP och metadatamatchema. Metadataservern innehåller ett WEB-API med en mängd sökfunktioner, t.ex. sökningar efter metadata eller bildens storlek, eller båda. En lista med metadataegenskaper begärs för varje returnerad resurs. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1ffbb36e209a6fc9-44279087131d3ad5622-8000.html). -->
+* Metadataservern visar en delmängd av alla metadatafält i en resurs för en offentlig server och kan begäras här av eCom-sidor eller servrar. Dessa exponerade metadata kan vara en blandad uppsättning med egenskaper för tillgångsegenskaper, användardefinierat fält, XMP och metadatamatchema. Metadataservern innehåller ett WEB-API med en mängd sökfunktioner, t.ex. sökningar efter metadata eller bildens storlek, eller båda. En lista med metadataegenskaper begärs för varje returnerad resurs.
 * Metadataimport kan hantera XMP egenskaper
 
    Import av metadata utökas för att hantera XMP egenskaper och egenskaper, som definieras i metadatamappningar.
