--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -1,13 +1,13 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.0
-description: '"Versionsinformation som beskriver funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.0, en del av Adobe Experience Manager lösning i Adobe Marketing Cloud."'
+description: "Versionsinformation som beskriver funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.0, en del av Adobe Experience Manager lösning i Adobe Marketing Cloud."
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 790ce3aa4e9aadc019d17e663fc93d7c69772b23
+source-git-commit: ec02213bc161f4e8fd7eb9c0017aeb42f27d055a
 workflow-type: tm+mt
-source-wordcount: '1075'
+source-wordcount: '1040'
 ht-degree: 0%
 
 ---
@@ -91,11 +91,11 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 **Integrering av arbetsflöden**
 
 * Integrering med Adobe CQ5: resurssynkronisering, Scene7-visningsprogram inbäddade i CQ5 och dynamisk leverans av multimediematerial på CQ5-sidor via Scene7-nätverk.
-* Nytt integrerat arbetsflöde med Adobe Search &amp; Promote: Lägg enkelt till marknadsföringsbanners från Scene7 som dynamiskt monteras baserat på kampanjregler för Search &amp; Promote för att söka och navigera på webbsidor.
-
-   Se&quot;Om banners&quot; i dokumentationen för Adobe Search &amp; Promote.
-
 * Scene7/Creative Suite - kompatibelt med den kommande releasen av Adobe Creative Suite 6.
+
+<!-- Search&Promote is end of life as of September 1, 2022 * New integrated workflow with Adobe Search&Promote: Easily add Scene7 marketing banners that are dynamically assembled based on Search&Promote campaign rules to search and navigation pages.
+
+  See "About Banners" in Adobe Search&Promote documentation.  -->
 
 **Innehållsmallar (dynamiska banderoller och web-to-print)**
 
