Updated by task 'AutomatedMDTask_1668182851419_TM-MT_1668182885729'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/b277acc23c40e0a8db1c090fb3e62e1518cb6a21

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '554'
+source-wordcount: '548'
 ht-degree: 0%
 
 ---
@@ -37,7 +37,7 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-* Adobe Experience Manager Dynamic Media Viewers
+* Adobe Experience Manager [!DNL Dynamic Media] Tittare
 
    * CarouselViewer
    * InteractiveImage
@@ -48,7 +48,7 @@ Paketet innehåller följande:
 
 ## Nya funktioner och förbättringar i 5.13.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
-* Stöd för integrering med Adobe Launch Dynamic Media Viewers-tillägget har lagts till.
+* Stöd för integrering med Adobe Launch har lagts till [!DNL Dynamic Media] Tillägg för visningsprogram.
 * Stöd för VR-funktionsläge har lagts till i Oculus Browser för Video360Viewer.
 * Tillagd `RolloverKeyEvent.HREF_ACTIVATED` händelse som tillåter att klientkoden svarar på aktivering av bildscheman i eCatalogViewer och eCatalogSearchViewer.
 
@@ -97,7 +97,7 @@ Paketet innehåller följande:
 **HTML5-video**
 
 * Posterbilden kan träffa på en `max size` fel. I så fall måste du öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en [!DNL Dynamic Media] server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
 * På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen under inläsningen av visningsprogrammet.
