--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -1,28 +1,28 @@
 ---
 title: Versionsinformation för Dynamic Media
-description: '"Den senaste versionsinformationen för Adobe Dynamic Media Classic, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+description: "Den senaste versionsinformationen för Adobe Dynamic Media Classic, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '1359'
+source-wordcount: '1344'
 ht-degree: 0%
 
 ---
 
-# Versionsinformation för Dynamic Media{#dynamic-media-release-notes}
+# [!DNL Dynamic Media] Versionsinformation{#dynamic-media-release-notes}
 
-Den senaste versionsinformationen om Adobe Dynamic Media Classic som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
+Den senaste versionsinformationen för Adobe [!DNL Dynamic Media] Classic - en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
-## Versionsinformation för Dynamic Media {#topic-1f5af440670a42f3bbb662eb86a196c6}
+## [!DNL Dynamic Media] Versionsinformation {#topic-1f5af440670a42f3bbb662eb86a196c6}
 
-Den senaste versionsinformationen för Adobe Dynamic Media Classic som en del av [!DNL Adobe Experience Manager] lösningen i [!DNL Adobe Experience Cloud].
+Den senaste versionsinformationen för Adobe [!DNL Dynamic Media] Klassisk del av [!DNL Adobe Experience Manager] lösningen i [!DNL Adobe Experience Cloud].
 
 * [Allmänt](s7rn2017.md#section-52afeb72ecb34c1585ea67a5051825a2)
 * [Scene7 Publishing System](s7rn2017.md#section-24487cb493444d808fb7193f0a00cdd4)
 * [Visare (Image Serving 5.8.1)](s7rn2017.md#section-e1940d4cedc641bca93236b4c1e0cfa7)
-* [Dynamic Media Image Serving 6.3.2 och Image Rendering 6.3.2](s7rn2017.md#section-19a3e96f52c74757bcdea0f8a11001f2)
+* [[!DNL Dynamic Media] Bildhantering 6.3.2 och Bildåtergivning 6.3.2](s7rn2017.md#section-19a3e96f52c74757bcdea0f8a11001f2)
 
 ## Allmänt {#section-52afeb72ecb34c1585ea67a5051825a2}
 
@@ -54,7 +54,7 @@ Fullständig dokumentation finns i  [https://experienceleague.adobe.com/docs/dyn
 
 ## Visare (Image Serving 5.8.1) {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html).
 
 **Nya funktioner i Image Serving 5.8.1**
 
@@ -172,7 +172,7 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 * HTML5-video
 
    * Posterbilden kan ha felet &quot;max size&quot;. Företaget måste öka begränsningsinställningen för Image Serving Publish.
-   * Videoklipp kräver en företagsregeluppsättning om värdtjänsten för HTML-sidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta supporten för Adobe om du behöver hjälp.
+   * Videoklipp kräver en företagsregeluppsättning om värdtjänsten för HTML-sidan hanteras från en extern server (inte en [!DNL Dynamic Media] server). Kontakta supporten för Adobe om du behöver hjälp.
    * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
    * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
    * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
@@ -182,7 +182,7 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
    * Förhandsvisningsbilden kanske inte visas i Microsoft® Edge-webbläsaren för första gången.
    * Posterbilden kan döljas efter att videon har lästs in i Internet Explorer 9 när progressiv uppspelning används.
 
-## Dynamic Media Image Serving 6.3.2 och Image Rendering 6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
+## [!DNL Dynamic Media] Bildhantering 6.3.2 och Bildåtergivning 6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
 
 * Konc-verktyg - `downsample2x2` flagga stöds inte längre. Den här flaggan var en 2x2-nedsampling med låg kvalitet som inte längre används av IPS.
 * CORS-huvud - CORS-huvudet är för närvarande konfigurerat för `/is/content/` förfrågningar.
