--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '603'
+source-wordcount: '601'
 ht-degree: 0%
 
 ---
@@ -102,7 +102,7 @@ Paketet innehåller följande:
 **HTML5-video**
 
 * Posterbilden kan träffa på en `max size` fel. I så fall måste du öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en [!DNL Dynamic Media] server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
 * På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen under inläsningen av visningsprogrammet.
