Updated by task 'MD_MANUAL_HANDOFF_1733143394829-DX-MISC-DOCS'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/67e12fae514341137e4218ea950f34da0d9997f3

--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -1,6 +1,6 @@
 ---
 title: Versionsinformation för Dynamic Media
-description: "Den senaste versionsinformationen för Adobe Dynamic Media Classic, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."
+description: Den senaste versionsinformationen för Adobe Dynamic Media Classic, som ingår i Adobe Experience Manager i Adobe Experience Cloud.
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
