--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -1,6 +1,6 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.0
-description: "Versionsinformation som beskriver funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.0, en del av Adobe Experience Manager lösning i Adobe Marketing Cloud."
+description: Versionsinformation som beskriver funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.0, en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
