--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -1,6 +1,6 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.10 (maj 2015)
-description: "Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud."
+description: Den senaste versionsinformationen som beskriver nya funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
