--- a/help/s7-release-notes/s7rn67.md
+++ b/help/s7-release-notes/s7rn67.md
@@ -1,6 +1,6 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.7
-description: "Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."
+description: Den senaste releaseversionen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.7, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
